[package]
name = "raserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.133",features = ["derive"]}
serde_derive = "1.0.133"
serde_json = "1.0.59"
actix-web = "3.3.3"
colored = "2"
serialport = "4.0.0"