[package]
name = "raserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.133",features = ["derive"]}
serde_derive = "1.0.133"
serde_json = "1.0.59"
actix-web = "3.3.3"
tokio = { version = "1", features = ["full"] }
colored = "2"
serialport = "4.0.0"
rodio = "0.15.0"
cpal = "0.13.5"
anyhow = "1.0.12"
hound = "3.4"
clap = { version = "3", default-features = false, features = ["std"] }
reqwest = "0.11.9"
async-trait = "0.1.52"
actix-cors = "0.5.4"